--- a/about-us.html
+++ b/about-us.html
@@ -59,7 +59,7 @@
         class="banner banner-top"
         href="https://www.templatemonster.com/website-templates/monstroid2.html"
         target="_blank"
-        ><img src="images/monstroid.jpg" alt="" height="0"
+        ><img src="images/marketing_banner.png" alt="LeadGen" height="0"
       /></a>
       <header class="section page-header">
         <!-- RD Navbar-->
@@ -97,8 +97,8 @@
                 <div class="rd-navbar-brand">
                   <a class="brand" href="index.html"
                     ><img
-                      src="images/logo-default-399x82.png"
-                      alt=""
+                      src="images/logo.png"
+                      alt="LeadGen"
                       width="199"
                       height="41"
                   /></a>
@@ -140,7 +140,8 @@
       <section class="breadcrumbs-custom">
         <section
           class="section parallax-container breadcrumbs-custom-main context-dark"
-          data-parallax-img="images/bg-image-1.jpg"
+          data-parallax-img="images/about.jpg"
+          id="banner"
         >
           <div class="parallax-content">
             <div class="container">
@@ -189,8 +190,8 @@
             </div>
             <div class="col-lg-6">
               <img
-                src="images/about-1-635x455.png"
-                alt=""
+                src="images/team.jpg"
+                alt="team"
                 width="635"
                 height="455"
               />
@@ -211,7 +212,8 @@
               <div class="block-ratio block-ratio-1">
                 <div class="block-ratio-dummy"></div>
                 <div class="block-ratio-content">
-                  <div class="box-custom-1">
+                  <div class="box-custom-1"
+                  style="background-image: linear-gradient(royalblue, white, royalblue);">
                     <h2>Projects</h2>
                     <h4>that we work on</h4>
                   </div>
@@ -223,7 +225,7 @@
                 <div class="block-ratio-dummy"></div>
                 <div
                   class="block-ratio-content bg-image"
-                  style="background-image: url(images/about-1-770x426.jpg)"
+                  style="background-image: url(images/online.jpg)"
                 ></div>
                 <a href="#">Online Marketing</a>
               </div>
@@ -233,7 +235,7 @@
                 <div class="block-ratio-dummy"></div>
                 <div
                   class="block-ratio-content bg-image"
-                  style="background-image: url(images/about-2-369x432.jpg)"
+                  style="background-image: url(images/social.png)"
                 ></div>
                 <a href="#">Social Media Marketing</a>
               </div>
@@ -243,7 +245,7 @@
                 <div class="block-ratio-dummy"></div>
                 <div
                   class="block-ratio-content bg-image"
-                  style="background-image: url(images/about-3-370x251.jpg)"
+                  style="background-image: url(images/brandr.jpg)"
                 ></div>
                 <a href="#">Brand Reputation Management</a>
               </div>
@@ -253,7 +255,7 @@
                 <div class="block-ratio-dummy"></div>
                 <div
                   class="block-ratio-content bg-image"
-                  style="background-image: url(images/about-4-370x251.jpg)"
+                  style="background-image: url(images/contextual.jpg)"
                 ></div>
                 <a href="#">Contextual Advertising</a>
               </div>
@@ -363,7 +365,7 @@
               <figure class="profile-modern-figure">
                 <img
                   class="profile-modern-image"
-                  src="images/team-1-369x315.jpg"
+                  src="images/jane.jpg"
                   alt=""
                   width="369"
                   height="315"
@@ -402,7 +404,7 @@
               <figure class="profile-modern-figure">
                 <img
                   class="profile-modern-image"
-                  src="images/team-2-369x315.jpg"
+                  src="images/Michael.jpg"
                   alt=""
                   width="369"
                   height="315"
@@ -441,7 +443,7 @@
               <figure class="profile-modern-figure">
                 <img
                   class="profile-modern-image"
-                  src="images/team-3-369x315.jpg"
+                  src="images/Kate.jpg"
                   alt=""
                   width="369"
                   height="315"
@@ -480,7 +482,7 @@
               <figure class="profile-modern-figure">
                 <img
                   class="profile-modern-image"
-                  src="images/team-4-369x315.jpg"
+                  src="images/Jake.jpg"
                   alt=""
                   width="369"
                   height="315"
@@ -519,7 +521,7 @@
               <figure class="profile-modern-figure">
                 <img
                   class="profile-modern-image"
-                  src="images/team-6-369x315.jpg"
+                  src="images/jake.jpg"
                   alt=""
                   width="369"
                   height="315"
@@ -597,7 +599,7 @@
               <figure class="profile-modern-figure">
                 <img
                   class="profile-modern-image"
-                  src="images/team-3-369x315.jpg"
+                  src="images/Kate.jpg"
                   alt=""
                   width="369"
                   height="315"
@@ -769,7 +771,7 @@
             <blockquote class="quote-classic">
               <img
                 class="quote-classic-avatar"
-                src="images/testimonials-1-102x102.jpg"
+                src="images/alice.jpg"
                 alt=""
                 width="102"
                 height="102"
@@ -791,7 +793,7 @@
             <blockquote class="quote-classic">
               <img
                 class="quote-classic-avatar"
-                src="images/testimonials-2-102x102.jpg"
+                src="images/john.jpg"
                 alt=""
                 width="102"
                 height="102"
@@ -813,7 +815,7 @@
             <blockquote class="quote-classic">
               <img
                 class="quote-classic-avatar"
-                src="images/testimonials-3-102x102.jpg"
+                src="images/scott.jpg"
                 alt=""
                 width="102"
                 height="102"
@@ -856,7 +858,7 @@
             <div class="wow clipInLeft">
               <a class="link-image-1" href="#"
                 ><img
-                  src="images/investor-1-88x77.png"
+                  src="images/client1.jpg"
                   alt=""
                   width="88"
                   height="77"
@@ -865,7 +867,7 @@
             <div class="wow clipInLeft" data-wow-delay=".1s">
               <a class="link-image-1" href="#"
                 ><img
-                  src="images/investor-2-73x78.png"
+                  src="images/client2.jpg"
                   alt=""
                   width="73"
                   height="78"
@@ -874,7 +876,7 @@
             <div class="wow clipInLeft" data-wow-delay=".2s">
               <a class="link-image-1" href="#"
                 ><img
-                  src="images/investor-3-96x62.png"
+                  src="images/client3.jpg"
                   alt=""
                   width="96"
                   height="62"
@@ -883,7 +885,7 @@
             <div class="wow clipInLeft" data-wow-delay=".3s">
               <a class="link-image-1" href="#"
                 ><img
-                  src="images/investor-4-78x80.png"
+                  src="images/client4.jpg"
                   alt=""
                   width="78"
                   height="80"
@@ -892,7 +894,7 @@
             <div class="wow clipInLeft" data-wow-delay=".4s">
               <a class="link-image-1" href="#"
                 ><img
-                  src="images/investor-5-87x76.png"
+                  src="images/client5.jpg"
                   alt=""
                   width="87"
                   height="76"
@@ -906,7 +908,7 @@
         class="banner"
         href="https://www.templatemonster.com/website-templates/monstroid2.html"
         target="_blank"
-        ><img src="images/monstroid_big.jpg" alt="" height="0"
+        ><img src="images/digital_1.jpg" alt="LeadGen" height="0"
       /></a>
       <footer class="section footer-classic">
         <div class="footer-classic-main">
@@ -915,14 +917,14 @@
               <div class="col-sm-7 col-lg-3 col-xl-2">
                 <a class="brand" href="index.html"
                   ><img
-                    src="images/logo-default-399x82.png"
+                    src="images/logo.png"
                     alt=""
                     width="199"
                     height="41"
                 /></a>
                 <p>
                   <span style="max-width: 250px"
-                    >Alice is your #1 business app for managing workflow.</span
+                    >LeadGen is your #1 business app for managing workflow.</span
                   >
                 </p>
                 <a
@@ -989,7 +991,7 @@
             <p class="rights">
               <span>&copy;&nbsp;</span><span class="copyright-year"></span>. All
               Rights Reserved. Design by
-              <a href="https://www.templatemonster.com">TemplateMonster</a>
+              <a href="https://www.templatemonster.com">Rishabh Bhatnagar</a>
             </p>
           </div>
         </div>
