--- a/contacts.html
+++ b/contacts.html
@@ -59,7 +59,7 @@
         class="banner banner-top"
         href="https://www.templatemonster.com/website-templates/monstroid2.html"
         target="_blank"
-        ><img src="images/monstroid.jpg" alt="" height="0"
+        ><img src="images/marketing_banner.png" alt="" height="0"
       /></a>
       <header class="section page-header">
         <!-- RD Navbar-->
@@ -97,7 +97,7 @@
                 <div class="rd-navbar-brand">
                   <a class="brand" href="index.html"
                     ><img
-                      src="images/logo-default-399x82.png"
+                      src="images/logo.png"
                       alt=""
                       width="199"
                       height="41"
@@ -140,7 +140,8 @@
       <section class="breadcrumbs-custom">
         <section
           class="section parallax-container breadcrumbs-custom-main context-dark"
-          data-parallax-img="images/bg-image-1.jpg"
+          data-parallax-img="images/contacts.jpg"
+          id="banner"
         >
           <div class="parallax-content">
             <div class="container">
@@ -427,7 +428,7 @@
         class="banner"
         href="https://www.templatemonster.com/website-templates/monstroid2.html"
         target="_blank"
-        ><img src="images/monstroid_big.jpg" alt="" height="0"
+        ><img src="images/digital_1.jpg" alt="LeadGen" height="0"
       /></a>
       <footer class="section footer-classic">
         <div class="footer-classic-main">
@@ -436,14 +437,14 @@
               <div class="col-sm-7 col-lg-3 col-xl-2">
                 <a class="brand" href="index.html"
                   ><img
-                    src="images/logo-default-399x82.png"
-                    alt=""
+                    src="images/logo.png"
+                    alt="LeadGen"
                     width="199"
                     height="41"
                 /></a>
                 <p>
                   <span style="max-width: 250px"
-                    >Alice is your #1 business app for managing workflow.</span
+                    >LeadGen is your #1 business app for managing workflow.</span
                   >
                 </p>
                 <a
@@ -510,7 +511,7 @@
             <p class="rights">
               <span>&copy;&nbsp;</span><span class="copyright-year"></span>. All
               Rights Reserved. Design by
-              <a href="https://www.templatemonster.com">TemplateMonster</a>
+              <a href="https://www.templatemonster.com">Rishabh Bhatnagar</a>
             </p>
           </div>
         </div>
