--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
     </div>
     <div class="page">
       <!-- Page Header--><a
-        class="banner banner-top"
-        href="https://www.templatemonster.com/website-templates/monstroid2.html"
-        target="_blank"
-        ><img src="images/monstroid.jpg" alt="" height="0"
+      class="banner banner-top"
+      href="https://www.templatemonster.com/website-templates/monstroid2.html"
+      target="_blank"
+        ><img src="images/marketing_banner.png" alt="LeadGen" height="0"
       /></a>
       <header class="section page-header">
         <!-- RD Navbar-->
@@ -97,10 +97,10 @@
                 <div class="rd-navbar-brand">
                   <a class="brand" href="index.html"
                     ><img
-                      src="images/logo-default-399x82.png"
-                      alt=""
+                      src="images/logo.png"
+                      alt="LeadGen"
                       width="199"
-                      height="41"
+                      height="71"
                   /></a>
                 </div>
               </div>
@@ -236,8 +236,8 @@
         </div>
         <div class="layout-4-item-left">
           <img
-            src="images/Team(654x515).jpeg"
-            alt=""
+            src="images/marketing.jpg"
+            alt="marketing"
             width="654"
             height="515"
           />
@@ -452,7 +452,7 @@
               data-wow-delay=".2s"
             >
               <img
-                src="images/home-02-594x493.png"
+                src="images/profit.jpg"
                 alt=""
                 width="594"
                 height="493"
@@ -482,7 +482,7 @@
                     <div class="quote-modern-info">
                       <img
                         class="quote-modern-avatar"
-                        src="images/testimonials-1-74x74.jpg"
+                        src="images/test1.jpg"
                         alt=""
                         width="74"
                         height="74"
@@ -523,7 +523,7 @@
                     <div class="quote-modern-info">
                       <img
                         class="quote-modern-avatar"
-                        src="images/testimonials-2-74x74.jpg"
+                        src="images/test2.jpg"
                         alt=""
                         width="74"
                         height="74"
@@ -563,7 +563,7 @@
                     <div class="quote-modern-info">
                       <img
                         class="quote-modern-avatar"
-                        src="images/testimonials-3-74x74.jpg"
+                        src="images/test3.jpg"
                         alt=""
                         width="74"
                         height="74"
@@ -620,7 +620,7 @@
             <div class="wow clipInLeft">
               <a class="link-image-1" href="#"
                 ><img
-                  src="images/investor-1-88x77.png"
+                  src="images/client1.jpg"
                   alt=""
                   width="88"
                   height="77"
@@ -629,7 +629,7 @@
             <div class="wow clipInLeft" data-wow-delay=".1s">
               <a class="link-image-1" href="#"
                 ><img
-                  src="images/investor-2-73x78.png"
+                  src="images/client2.jpg"
                   alt=""
                   width="73"
                   height="78"
@@ -638,7 +638,7 @@
             <div class="wow clipInLeft" data-wow-delay=".2s">
               <a class="link-image-1" href="#"
                 ><img
-                  src="images/investor-3-96x62.png"
+                  src="images/client3.jpg"
                   alt=""
                   width="96"
                   height="62"
@@ -647,7 +647,7 @@
             <div class="wow clipInLeft" data-wow-delay=".3s">
               <a class="link-image-1" href="#"
                 ><img
-                  src="images/investor-4-78x80.png"
+                  src="images/client4.jpg"
                   alt=""
                   width="78"
                   height="80"
@@ -656,7 +656,7 @@
             <div class="wow clipInLeft" data-wow-delay=".4s">
               <a class="link-image-1" href="#"
                 ><img
-                  src="images/investor-5-87x76.png"
+                  src="images/client5.jpg"
                   alt=""
                   width="87"
                   height="76"
@@ -705,7 +705,7 @@
         class="banner"
         href="https://www.templatemonster.com/website-templates/monstroid2.html"
         target="_blank"
-        ><img src="images/monstroid_big.jpg" alt="" height="0"
+        ><img src="images/digital_1.jpg" alt="" height="0"
       /></a>
       <footer class="section footer-classic">
         <div class="footer-classic-main">
@@ -714,7 +714,7 @@
               <div class="col-sm-7 col-lg-3 col-xl-2">
                 <a class="brand" href="index.html"
                   ><img
-                    src="images/logo-default-399x82.png"
+                    src="images/logo.png"
                     alt=""
                     width="199"
                     height="41"
@@ -744,7 +744,7 @@
                 <ul class="list footer-classic-list footer-classic-list_2-cols">
                   <li><a href="#">Sign Up</a></li>
                   <li><a href="#">Our Team</a></li>
-                  <li><a href="#">Portfolio</a></li>
+                  <li><a href="https://rishabheditkaroportfolio.netlify.app/" target="_blank">Portfolio</a></li>
                   <li><a href="#">Pricing</a></li>
                   <li><a href="#">Testimonials</a></li>
                   <li><a href="#">FAQ</a></li>
