--- a/about-us.html
+++ b/about-us.html
@@ -57,9 +57,8 @@
     <div class="page">
       <!-- Page Header--><a
         class="banner banner-top"
-        href="https://www.templatemonster.com/website-templates/monstroid2.html"
-        target="_blank"
-        ><img src="images/marketing_banner.png" alt="LeadGen" height="0"
+        href="index.html"
+        ><img src="images/marketing_banner.png" alt="EditKaro" height="0"
       /></a>
       <header class="section page-header">
         <!-- RD Navbar-->
@@ -98,7 +97,7 @@
                   <a class="brand" href="index.html"
                     ><img
                       src="images/logo.png"
-                      alt="LeadGen"
+                      alt="EditKaro"
                       width="199"
                       height="41"
                   /></a>
@@ -128,7 +127,7 @@
               <div class="rd-navbar-element">
                 <a
                   class="button button-sm button-default-outline button-winona"
-                  href="#"
+                  href="contacts.html#touch"
                   >Get a Quote</a
                 >
               </div>
@@ -298,7 +297,7 @@
                   <p>What we do</p>
                   <a
                     class="button button-primary button-winona"
-                    href="contacts.html"
+                    href="contacts.html#touch"
                     >Get a Quote</a
                   >
                 </div>
@@ -688,7 +687,7 @@
                   Pellentesque placerat eros ac finibus congue. Integer
                   consectetur
                 </p>
-                <a class="button button-primary button-winona" href="#"
+                <a class="button button-primary button-winona" href="typography.html"
                   >Read More</a
                 >
               </div>
@@ -754,7 +753,8 @@
       </section>
 
       <!-- Testimonials-->
-      <div class="section-lg bg-accent bg-accent text-center">
+      <div class="section-lg bg-accent bg-accent text-center"
+      id="testimonial">
         <div class="container">
           <h3>Testimonials</h3>
           <div
@@ -904,101 +904,101 @@
         </div>
       </section>
 
-      <!-- Page Footer--><a
-        class="banner"
-        href="https://www.templatemonster.com/website-templates/monstroid2.html"
-        target="_blank"
-        ><img src="images/digital_1.jpg" alt="LeadGen" height="0"
-      /></a>
-      <footer class="section footer-classic">
-        <div class="footer-classic-main">
-          <div class="container">
-            <div class="row row-50 justify-content-lg-between">
-              <div class="col-sm-7 col-lg-3 col-xl-2">
-                <a class="brand" href="index.html"
-                  ><img
-                    src="images/logo.png"
-                    alt=""
-                    width="199"
-                    height="41"
-                /></a>
-                <p>
-                  <span style="max-width: 250px"
-                    >LeadGen is your #1 business app for managing workflow.</span
-                  >
-                </p>
-                <a
-                  class="button button-sm button-default-outline button-winona"
-                  href="#"
-                  >Get in Touch</a
-                >
-              </div>
-              <div class="col-sm-5 col-lg-3 col-xl-2">
-                <h4 class="footer-classic-title">About</h4>
-                <ul class="list footer-classic-list">
-                  <li><a href="about-us.html">About Us</a></li>
-                  <li><a href="#">Careers</a></li>
-                  <li><a href="#">Press and media</a></li>
-                </ul>
-              </div>
-              <div class="col-sm-7 col-lg-5 col-xl-3">
-                <h4 class="footer-classic-title">Quick Links</h4>
-                <ul class="list footer-classic-list footer-classic-list_2-cols">
-                  <li><a href="#">Sign Up</a></li>
-                  <li><a href="#">Our Team</a></li>
-                  <li><a href="#">Portfolio</a></li>
-                  <li><a href="#">Pricing</a></li>
-                  <li><a href="#">Testimonials</a></li>
-                  <li><a href="#">FAQ</a></li>
-                  <li><a href="#">Services</a></li>
-                </ul>
-              </div>
-              <div class="col-sm-5 col-lg-9 col-xl-2">
-                <h4 class="footer-classic-title">Contact Us</h4>
-                <div class="row row-20 row-sm-35">
-                  <div class="col-6 col-sm-12 col-lg-8 col-xl-12">
-                    <div class="row row-10 text-default">
-                      <div class="col-lg-6 col-xl-12">
-                        <a href="mailto:#">info@demolink.org</a>
-                      </div>
-                      <div class="col-lg-6 col-xl-12">
-                        <a class="big" href="tel:#">+1-853-234-65</a>
-                      </div>
-                    </div>
-                  </div>
-                  <div
-                    class="col-6 col-sm-12 col-lg-4 col-xl-12 text-right text-sm-left"
-                  >
-                    <div class="group group-xs">
-                      <a class="link link-social-1 mdi mdi-twitter" href="#"></a
-                      ><a
-                        class="link link-social-1 mdi mdi-facebook"
-                        href="#"
-                      ></a
-                      ><a
-                        class="link link-social-1 mdi mdi-instagram"
-                        href="#"
-                      ></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="footer-classic-aside">
-          <div class="container">
-            <p class="rights">
-              <span>&copy;&nbsp;</span><span class="copyright-year"></span>. All
-              Rights Reserved. Design by
-              <a href="https://www.templatemonster.com">Rishabh Bhatnagar</a>
-            </p>
-          </div>
-        </div>
-      </footer>
-    </div>
-    <div class="snackbars" id="form-output-global"></div>
-    <script src="js/core.min.js"></script>
-    <script src="js/script.js"></script>
-  </body>
+     <!-- Page Footer--><a
+     class="banner"
+     href="index.html"
+     ><img src="images/digital_1.jpg" alt="editkaro" height="0"
+   /></a>
+   <footer class="section footer-classic">
+     <div class="footer-classic-main">
+       <div class="container">
+         <div class="row row-50 justify-content-lg-between">
+           <div class="col-sm-7 col-lg-3 col-xl-2">
+             <a class="brand" href="index.html"
+               ><img
+                 src="images/logo.png"
+                 alt=""
+                 width="199"
+                 height="41"
+             /></a>
+             <p>
+               <span style="max-width: 250px"
+                 >Our agency provides quality digital marketing
+                 services.</span
+               >
+             </p>
+             <a
+               class="button button-sm button-default-outline button-winona"
+               href="contacts.html#touch"
+               >Get in Touch</a
+             >
+           </div>
+           <div class="col-sm-5 col-lg-3 col-xl-2">
+             <h4 class="footer-classic-title">About</h4>
+             <ul class="list footer-classic-list">
+               <li><a href="about-us.html">About Us</a></li>
+               <li><a href="about-us.html">Careers</a></li>
+               <li><a href="index.html">Press and media</a></li>
+             </ul>
+           </div>
+           <div class="col-sm-7 col-lg-5 col-xl-3">
+             <h4 class="footer-classic-title">Quick Links</h4>
+             <ul class="list footer-classic-list footer-classic-list_2-cols">
+               <li><a href="contacts.html#touch">Sign Up</a></li>
+               <li><a href="about-us.html">Our Team</a></li>
+               <li><a href="https://rishabheditkaroportfolio.netlify.app/" target="_blank">Portfolio</a></li>
+               <li><a href="contacts.html#touch">Pricing</a></li>
+               <li><a href="#testimonial">Testimonials</a></li>
+               <li><a href="about-us.html">FAQ</a></li>
+               <li><a href="about-us.html">Services</a></li>
+             </ul>
+           </div>
+           <div class="col-sm-5 col-lg-9 col-xl-2">
+             <h4 class="footer-classic-title">Contact Us</h4>
+             <div class="row row-20 row-sm-35">
+               <div class="col-6 col-sm-12 col-lg-8 col-xl-12">
+                 <div class="row row-10 text-default">
+                   <div class="col-lg-6 col-xl-12">
+                     <a href="mailto:#">info@demolink.org</a>
+                   </div>
+                   <div class="col-lg-6 col-xl-12">
+                     <a class="big" href="tel:#">+1-853-234-65</a>
+                   </div>
+                 </div>
+               </div>
+               <div
+                 class="col-6 col-sm-12 col-lg-4 col-xl-12 text-right text-sm-left"
+               >
+                 <div class="group group-xs">
+                   <a class="link link-social-1 mdi mdi-twitter" href="index.html"></a
+                   ><a
+                     class="link link-social-1 mdi mdi-facebook"
+                     href="index.html"
+                   ></a
+                   ><a
+                     class="link link-social-1 mdi mdi-instagram"
+                     href="index.html"
+                   ></a>
+                 </div>
+               </div>
+             </div>
+           </div>
+         </div>
+       </div>
+     </div>
+     <div class="footer-classic-aside">
+       <div class="container">
+         <p class="rights">
+           <span>&copy;&nbsp;</span><span class="copyright-year"></span>. All
+           Rights Reserved. Design by
+           <a href="https://github.com/Rishabh01505" target="_blank">Rishabh Bhatnagar</a>
+         </p>
+       </div>
+     </div>
+   </footer>
+ </div>
+ <div class="snackbars" id="form-output-global"></div>
+ <script src="js/core.min.js"></script>
+ <script src="js/script.js"></script>
+</body>
 </html>
