--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
     <div class="page">
       <!-- Page Header--><a
       class="banner banner-top"
-      href="https://www.templatemonster.com/website-templates/monstroid2.html"
+      href="index.html"
       target="_blank"
-        ><img src="images/marketing_banner.png" alt="LeadGen" height="0"
+        ><img src="images/marketing_banner.png" alt="editkaro" height="0"
       /></a>
       <header class="section page-header">
         <!-- RD Navbar-->
@@ -98,7 +98,7 @@
                   <a class="brand" href="index.html"
                     ><img
                       src="images/logo.png"
-                      alt="LeadGen"
+                      alt="editkaro"
                       width="199"
                       height="71"
                   /></a>
@@ -128,7 +128,7 @@
               <div class="rd-navbar-element">
                 <a
                   class="button button-sm button-default-outline button-winona"
-                  href="#"
+                  href="contacts.html#touch"
                   >Get a Quote</a
                 >
               </div>
@@ -287,7 +287,7 @@
                 <p class="box-modern-title">Analytics & Research</p>
                 <div class="box-modern-text">
                   <p>
-                    A&R services of LeadGen guarantee successful marketing
+                    A&R services of EditKaro guarantee successful marketing
                     results.
                   </p>
                 </div>
@@ -425,7 +425,7 @@
                       <li>Increased exposure of products and services;</li>
                       <li>Boundless universal accessibility.</li>
                     </ul>
-                    <a class="button button-default button-winona" href="#"
+                    <a class="button button-default button-winona" href="contacts.html#touch"
                       >Learn More</a
                     >
                   </div>
@@ -537,7 +537,7 @@
                   <div class="quote-modern-main">
                     <div class="quote-modern-text">
                       <p>
-                        LeadGen Agency has been a great help to my marketing
+                        EditKaro Agency has been a great help to my marketing
                         efforts for the past several years.
                       </p>
                     </div>
@@ -688,12 +688,12 @@
                 We Work with Clients All Over the World
               </h3>
               <p class="big wow clipInLeft" data-wow-delay=".2s">
-                LeadGen helps clients inside and outside of the US to achieve
+                EditKaro helps clients inside and outside of the US to achieve
                 success by using our services and solutions.
               </p>
               <a
                 class="button button-primary button-winona button-shadow"
-                href="#"
+                href="contacts.html#touch"
                 >Get a Quote</a
               >
             </div>
@@ -703,9 +703,8 @@
 
       <!-- Page Footer--><a
         class="banner"
-        href="https://www.templatemonster.com/website-templates/monstroid2.html"
-        target="_blank"
-        ><img src="images/digital_1.jpg" alt="" height="0"
+        href="index.html"
+        ><img src="images/digital_1.jpg" alt="editkaro" height="0"
       /></a>
       <footer class="section footer-classic">
         <div class="footer-classic-main">
@@ -727,7 +726,7 @@
                 </p>
                 <a
                   class="button button-sm button-default-outline button-winona"
-                  href="#"
+                  href="contacts.html#touch"
                   >Get in Touch</a
                 >
               </div>
@@ -735,20 +734,20 @@
                 <h4 class="footer-classic-title">About</h4>
                 <ul class="list footer-classic-list">
                   <li><a href="about-us.html">About Us</a></li>
-                  <li><a href="#">Careers</a></li>
-                  <li><a href="#">Press and media</a></li>
+                  <li><a href="about-us.html">Careers</a></li>
+                  <li><a href="index.html">Press and media</a></li>
                 </ul>
               </div>
               <div class="col-sm-7 col-lg-5 col-xl-3">
                 <h4 class="footer-classic-title">Quick Links</h4>
                 <ul class="list footer-classic-list footer-classic-list_2-cols">
-                  <li><a href="#">Sign Up</a></li>
-                  <li><a href="#">Our Team</a></li>
+                  <li><a href="contacts.html#touch">Sign Up</a></li>
+                  <li><a href="about-us.html">Our Team</a></li>
                   <li><a href="https://rishabheditkaroportfolio.netlify.app/" target="_blank">Portfolio</a></li>
-                  <li><a href="#">Pricing</a></li>
-                  <li><a href="#">Testimonials</a></li>
-                  <li><a href="#">FAQ</a></li>
-                  <li><a href="#">Services</a></li>
+                  <li><a href="contacts.html#touch">Pricing</a></li>
+                  <li><a href="index.html#testimonials">Testimonials</a></li>
+                  <li><a href="about-us.html">FAQ</a></li>
+                  <li><a href="about-us.html">Services</a></li>
                 </ul>
               </div>
               <div class="col-sm-5 col-lg-9 col-xl-2">
@@ -768,14 +767,14 @@
                     class="col-6 col-sm-12 col-lg-4 col-xl-12 text-right text-sm-left"
                   >
                     <div class="group group-xs">
-                      <a class="link link-social-1 mdi mdi-twitter" href="#"></a
+                      <a class="link link-social-1 mdi mdi-twitter" href="index.html"></a
                       ><a
                         class="link link-social-1 mdi mdi-facebook"
-                        href="#"
+                        href="index.html"
                       ></a
                       ><a
                         class="link link-social-1 mdi mdi-instagram"
-                        href="#"
+                        href="index.html"
                       ></a>
                     </div>
                   </div>
@@ -789,7 +788,7 @@
             <p class="rights">
               <span>&copy;&nbsp;</span><span class="copyright-year"></span>. All
               Rights Reserved. Design by
-              <a href="https://www.templatemonster.com">TemplateMonster</a>
+              <a href="https://github.com/Rishabh01505" target="_blank">Rishabh Bhatnagar</a>
             </p>
           </div>
         </div>
