--- a/about-us.html
+++ b/about-us.html
@@ -514,7 +514,7 @@
               <figure class="profile-modern-figure">
                 <img
                   class="profile-modern-image"
-                  src="images/jake.jpg"
+                  src="images/james.jpg"
                   alt=""
                   width="369"
                   height="315"
@@ -553,7 +553,7 @@
               <figure class="profile-modern-figure">
                 <img
                   class="profile-modern-image"
-                  src="images/team-5-369x315.jpg"
+                  src="images/phillip.jpg"
                   alt=""
                   width="369"
                   height="315"
@@ -592,7 +592,7 @@
               <figure class="profile-modern-figure">
                 <img
                   class="profile-modern-image"
-                  src="images/Kate.jpg"
+                  src="images/jenny.jpg"
                   alt=""
                   width="369"
                   height="315"
@@ -602,8 +602,8 @@
                 <div
                   class="profile-modern-main-item profile-modern-main-item_primary"
                 >
-                  <h5 class="profile-modern-name">Kate Wilson</h5>
-                  <p class="profile-modern-position">Advertising Expert</p>
+                  <h5 class="profile-modern-name">Jenny Watson</h5>
+                  <p class="profile-modern-position">Research Analyst</p>
                 </div>
                 <div
                   class="profile-modern-main-item profile-modern-main-item_secondary"
@@ -631,7 +631,7 @@
               <figure class="profile-modern-figure">
                 <img
                   class="profile-modern-image"
-                  src="images/team-2-369x315.jpg"
+                  src="images/Michael2.jpg"
                   alt=""
                   width="369"
                   height="315"
