--- a/about-us.html
+++ b/about-us.html
@@ -407,8 +407,8 @@
                 <div
                   class="profile-modern-main-item profile-modern-main-item_primary"
                 >
-                  <h5 class="profile-modern-name">Michael Lee</h5>
-                  <p class="profile-modern-position">Marketing Analyst</p>
+                  <h5 class="profile-modern-name">Michael Doe</h5>
+                  <p class="profile-modern-position">Co-founder &amp; CTO</p>
                 </div>
                 <div
                   class="profile-modern-main-item profile-modern-main-item_secondary"
@@ -563,7 +563,7 @@
                 <div
                   class="profile-modern-main-item profile-modern-main-item_primary"
                 >
-                  <h5 class="profile-modern-name">Phillip Smith</h5>
+                  <h5 class="profile-modern-name">Phillip Wayne</h5>
                   <p class="profile-modern-position">SMM Expert</p>
                 </div>
                 <div
@@ -641,7 +641,7 @@
                 <div
                   class="profile-modern-main-item profile-modern-main-item_primary"
                 >
-                  <h5 class="profile-modern-name">Michael Lee</h5>
+                  <h5 class="profile-modern-name">Dennis Lee</h5>
                   <p class="profile-modern-position">Marketing Analyst</p>
                 </div>
                 <div
